# latinos

./: .context.json  .gitignore  CONTEXT.md  Cargo.toml  GUIA_BACKTESTING.md  PROGRESS.md  PROGRESS_GOLDEN_GOOSE.md  README.md  app.toml  app_registry.yaml  check_latinos_db.js  convert_openapi.py  dify_custom_tools.yaml  dify_custom_tools_perfect.json  dify_custom_tools_perfect.yaml  dify_custom_tools_schema.json  docker-compose.yml  ecosystem.config.js  latinos-backend.service  launch_latinos_team.sh  publish_gg2.py  publish_gg3.py  publish_golden_goose.py  reorganize-packages.sh  research_golden_goose.py  run_manual_matrix.py  seed_bot.sql  serve_schema.py  test_market.py  vision.toml
.agent/rules/: server-setup.md
.agent/workflows/: api-architecture.md  deploy-agent-team.md
app/: GOOGLE_OAUTH_SETUP.md  app.db  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
app/public/: Benchmark_Zona.html
app/src/: payload-types.ts  payload.config.ts
backend/: DEPENDENCIES.md  Dockerfile  add_column.py  check_signal.py  cleanup_aggressive.py  cleanup_signals.py  count_signals.py  create_demo_user.py  create_simulation_data.py  create_standard_signals.py  debug_backtest_full.py  debug_endpoint_direct.sh  debug_endpoint_python.py  debug_full_bot_flow.py  debug_market.py  debug_runner.py  debug_runner_aapl.py  debug_strategy_isolation.py  deduplicate_signals_smart.py  fix_broken_signals.py  fix_market_data.py  fix_signal_status.py  fix_signals_sql.py  insert_brokers.py  inspect_aggressive.py  inspect_bots.py  inspect_pro_signals.py  inspect_prueba.py  inspect_signals.py  inspect_survivors.py  list_signals.py  make_admin.py  migrate_market_data.py  migrate_to_postgres.py  migrate_users.py  populate_market_data.py  pyproject.toml  requirements.txt  seed.py  seed_data.py  (+7 more)
backend/alembic/: env.py
backend/alembic/versions/: 099685538d0a_initial_tables.py  5150e107396f_add_script_to_bots.py
backend/app/: __init__.py  arena.py  constants.py  crud.py  daemon.py  db.py  debug_runner.py  dependencies.py  main.py  market.py  market_data_loader.py  models.py  scheduler.py  schemas.py  signals.py  worker.py
backend/app/brokers/: alpaca_broker.py
backend/app/routers/: auth.py  billing.py  bots.py  brokers.py  dashboard.py  dify_tools.py  signals.py  trades.py  users.py
backend/fastapi/: __init__.py  security.py  status.py  testclient.py
backend/pydantic/: __init__.py
backend/scripts/: test_alpaca.py  test_signal_logic.py
backend/tests/: test_app.py
backend/wasm_test/: Cargo.toml  test_wasm.py
backend/wasm_test/compiler/: transpile.py
backend/wasm_test/src/: lib.rs
config/: development.yaml
context_portal/: alembic.ini
context_portal/alembic/: env.py
deprecated/ai-trading-bot-platform/: App.tsx  constants.ts  index.html  index.tsx  package.json
deprecated/ai-trading-platform-trading/: package.json
dify-mcp/: create_real_dify_bot.py  dify_mcp.py  dify_template.json  extract_code_node.py  extract_template.py  extract_tools_template.py  fix_dify_crash.py  get_dify_workspace.py  test_dify_syntax.py  test_injection.py  test_local.py
docs/: plan.md
frontend/: .env.example  Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  temp_stitch_dashboard.html  tsconfig.json  vercel.json
frontend/lib/: api.ts  (+8 more)
infrastructure/: docker-compose.yml
latinoapp/: package-lock.json  package.json
migration/: Cargo.toml
shared/: api-client.ts
shared/auth-kit/: Cargo.toml
shared/auth-kit/src/: lib.rs
src/: app.rs  backtest.rs  backtest_tests.rs  bot_engine.rs  hera_ipc.rs  indicators.rs  legacy_adapter.rs  lib.rs  manifest_eval.rs  market_data.rs  memento_query.rs  observability.rs  opportunity.rs  opportunity_tests.rs  risk_engine.rs  shadow_seeding.rs  universe_scanner.rs  walk_forward.rs  walk_forward_tests.rs
tests/: benchmark_scanner.rs  flow_verification.rs
views/: base.html.tera
(+517 files in other folders)
