[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "latinos-backend"
version = "0.1.0"
description = "FastAPI backend for Latinos app"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "python-multipart",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "httpx",
    "yfinance",
    "redis"
]

[tool.setuptools]
packages = ["app", "fastapi", "pydantic"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
    "mypy"
]
