[package]
name = "os-auth-kit"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.8" }
loco-rs = { version = "0.16" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tera = { version = "1" }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
jsonwebtoken = "9"
tracing = "0.1"
urlencoding = "2"
